--- a/4pics1word/templates/html_components/navbar.html
+++ b/4pics1word/templates/html_components/navbar.html
@@ -6,6 +6,7 @@
         <form class="d-flex">
             <input class="form-control me-2" type="text" name="search" id="srch" placeholder="Search">
             <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
+            <div id="search-result" class="search-dropdown"></div>
         </form>
     </div>
     {% endif %}
