--- a/4pics1word/static/css/nav-bar.css
+++ b/4pics1word/static/css/nav-bar.css
@@ -59,6 +59,7 @@ i{
     color: grey;
     font-size: 16px;
     text-align: center;
+    z-index: 1000 !important;
     
 }
 
@@ -76,6 +77,7 @@ i{
     right: 9px;
     transform: scale(0.9);
     background: purple;
+    z-index: 1100!important;
 }
  
   @media (max-width: 992px) 
@@ -130,20 +132,27 @@ i{
     margin-left: 2vw !important;
 }
 
+.form-control:focus{
+    box-shadow: none!important;
+    border: 1px solid #ccc!important;
+
+}
+
 
 .search-dropdown {
     display: none; 
     position: absolute;
     background-color: #f8f9fa;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    width: calc(100% - 2px); 
+    width: calc(100% - 8px); 
     left: 0;
     top: 100%;
     border: 1px solid #ccc;
     border-top: none;
-    z-index: 1000;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
+    padding-top: 20px;
+    margin-top: -20px;
 }
 
 
