--- a/4pics1word/static/css/nav-bar.css
+++ b/4pics1word/static/css/nav-bar.css
@@ -168,6 +168,11 @@ i{
     border-bottom: none; 
 }
 
+.search-dropdown a:last-child:hover{
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
 .search-dropdown a:hover {
     background-color: #e9ecef;
 }
