--- a/4pics1word/templates/detailed-challenge.html
+++ b/4pics1word/templates/detailed-challenge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4pics1word | Challenge</title>
+    <title>SnapCipher | Challenge</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -116,30 +116,8 @@
     <p style = 'text-align: center;'>
         Once you guess correctly you will not be able to play towards the leaderboard, but you can still play the game.
     </p>
-    <button id = {{game.gameId}} class = 'btn'>Play Game</button>
 
-    <script>
-        $(document).ready(function() {
-            $("button").click(function() {
+    <a href="/challenge/play/{{game.gameId}}" class='btn'>Play Game</a>
 
-                let id = this.id
-                $.ajax({
-                    url: "/challenge/play/" + id,
-                    success: function(data) {
-                        document.open();
-                        document.write(data);
-                        document.close();
-                    }
-                });
-            });
-        });
-
-    </script>
-
-
-    
-
-
-    
 </body>
 </html>
