--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4pics1word | Play Game</title>
+    <title>SnapCipher | Play Game</title>
     <script> const answer = "{{ answer }}"; const challenge_id = "{{ challenge_id }}"; let attempt = "{{ attempt_count }}"; const message = "{{ message }}";</script>
     <script defer src="{{ url_for('static', filename='js/game-attempt.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
