--- a/4pics1word/templates/html_components/auth_modal.html
+++ b/4pics1word/templates/html_components/auth_modal.html
@@ -10,15 +10,18 @@
                   </svg>
             </button>
             <div class="wrapper">
-                <form id = 'login-form' novalidate class = 'needs-validation'>
+                <form id = 'login-form' method = 'POST' action = "{{ url_for('login') }}" novalidate class = 'needs-validation'>
+                    {{ loginform.hidden_tag() }}
                     <h1>Login</h1>
                     <div class="username-container input-box">
-                        <input type="text" id = 'username-login' placeholder="Username" class = 'form-control' name="username" required>
+                        <!-- <input type="text" id = 'username-login' placeholder="Username" class = 'form-control' name="username" required> -->
+                        {{ loginform.username(class="form-control", placeholder="Username") }}
                         <i class="bi bi-person-fill"></i>
                         <div id = 'login-username-error' class = 'invalid-feedback'>Required field</div>
                     </div>
                     <div class="password-container input-box">
-                        <input type="password" id = 'password-login' placeholder="Password" class = 'form-control' name="password" required>
+                        <!-- <input type="password" id = 'password-login' placeholder="Password" class = 'form-control' name="password" required> -->
+                        {{ loginform.password(class="form-control", placeholder="Password") }}
                         <i class="bi bi-key-fill"></i>
                         <div id = 'login-password-error' class = 'invalid-feedback'>Required field</div>
                     </div>
@@ -48,22 +51,25 @@
                   </svg>
             </button>
             <div class="wrapper">
-                <form id = 'register-form' novalidate class = 'needs-validation'>
+                <form id = 'register-form' method = 'POST' action = "{{ url_for('register') }}" novalidate class = 'needs-validation'>
+                    {{ registerform.hidden_tag() }}
                     <h1>Register</h1>
                     <div class="input-box">
-                        <input type="text" id = 'username-register' class = 'form-control' placeholder="Username" name="username"
-                        required>
+                        <!-- <input type="text" id = 'username-register' class = 'form-control' placeholder="Username" name="username"
+                        required> -->
+                        {{ registerform.username(class="form-control", placeholder="Username") }}
                         <i class="bi bi-person-fill"></i>
                         <div id = 'register-username-error' class = 'invalid-feedback'>Required field</div>
                     </div>
                     <div class="input-box">
-                        <input type="password" id = 'password-register' class = 'form-control' placeholder="Password" name="password" required>
-
+                        <!-- <input type="password" id = 'password-register' class = 'form-control' placeholder="Password" name="password" required> -->
+                        {{ registerform.password(class="form-control", placeholder="Password") }}
                         <i class="bi bi-key-fill"></i>
                         <div id = 'register-password-error' class = 'invalid-feedback'>Required field</div>
                     </div>
                     <div class="input-box">
-                        <input type="password" id = 'password-confirm-register' class = 'form-control' placeholder="Confirm Password" name="confirmPassword" required>
+                        <!-- <input type="password" id = 'password-confirm-register' class = 'form-control' placeholder="Confirm Password" name="confirmPassword" required> -->
+                        {{ registerform.confirm_password(class="form-control", placeholder="Confirm Password") }}
                         <i class="bi bi-key-fill"></i>
                         <div id = 'register-password-confirm-error' class = 'invalid-feedback'>Required field</div>
                     </div>
