--- a/4pics1word/templates/html_components/navbar.html
+++ b/4pics1word/templates/html_components/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="{{url_for('index')}}">4Pics1Word</a>
+    <a class="navbar-brand" href="{{url_for('index')}}">SnapCipher</a>
 
     {% if not is_index %}
     <div class="search-box">
