--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -34,7 +34,7 @@
         }
     </style>
 
-    <title>Document</title>
+    <title>SnapCiphers | Create and Solve Picture Puzzles</title>
 </head>
 
 <body>
@@ -55,9 +55,9 @@
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 mb-5 text-center">
         <div class="container guess-phrase-section">
             <div class="row justify-content-center align-items-center">
-                <div class="col-md-6" data-aos="fade-up">
-                    <h1 class="display-3 fw-bold fs-1">Guess the phrase!</h1>
-                    <h2 class="lead fs-4">Analyze four images and guess the phrase that links the images
+                <div class="col-md-6 guess-phrase-text" data-aos="fade-up">
+                    <h1 class="display-3 fw-bold fs-2">Guess the phrase!</h1>
+                    <h2 class="lead fs-5">Analyze four images and guess the phrase that links the images
                         together. Challenge friends to guess your phrases or try and beat other peoples challenges! Are
                         you up for the challenge?</h2>
                 </div>
@@ -96,27 +96,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6" data-aos="fade-right" data-aos-delay="300">
-                    <h1 class="display-3 fw-bold fs-1">How to Play</h1>
-                    <h2 class="lead fs-4">Login. Create a game. Choose a title, upload your 4 pictures and choose a word
-                        that
-                        relates them all together and give everyone a hint to guess the phrase to your challenge.</h2>
+                <div class="col-md-6 how-to-play-text" data-aos="fade-right" data-aos-delay="300">
+                    <h1 class="display-3 fw-bold fs-2">How to Play</h1>
+                    <h2 class="lead fs-5">Login. Create a game. Choose a title, upload your 4 pictures and choose a word that relates them all together and give everyone a hint to guess the phrase to your challenge.</h2>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 mb-5 text-center">
+    <div class="position-relative explore-challenges-section overflow-hidden p-3 p-md-5 m-md-3 mb-5 text-center">
         <div class="container">
             <div class="row justify-content-center align-items-center">
-                <div class="col-md-6" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1500">
-                    <h1 class="display-3 fw-bold fs-1">Explore Challenges!</h1>
-                    <h2 class="lead fs-4">Visit the challenges page in the navigation bar to find
-                        trending posts as well as all the challenges users have posted!</h2>
+                <div class="col-md-6 explore-challenges-text" data-aos="fade-up" data-aos-offset="100" data-aos-duration="1500">
+                    <h1 class="display-3 fw-bold fs-2">Explore Challenges!</h1>
+                    <h2 class="lead fs-5">Visit the challenges page in the navigation bar to find trending posts as well as all the challenges users have posted!</h2>
                 </div>
-                <div class="col-md-6">
-                    <img src="{{url_for('static', filename = 'assets/challenges-current.gif')}}"
-                        alt="Challenge page gif" class="img-fluid" style="min-height: 100%;">
+                <div class="col-md-6 challenge-board-video" data-aos="fade-up" data-aos-offset="100" data-aos-duration="1500">
+                    <video width = 100% height =100% autoplay muted loop>
+                        <source src="{{url_for('static', filename = 'assets/challenge-board-tut.mp4')}}" type="video/mp4">
+                        Your browser does not support video.
+                    </video>
                 </div>
             </div>
         </div>
