These changes were made to get rid of the uneeded commented code and code that was commented to be uncommented in the game_attempt.css and challenge-board.html

--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -25,7 +25,6 @@
 </head>
 
 <body>
-    <!--  -->
     {% include "/html_components/navbar.html" %}
 
     {% include "/html_components/auth_modal.html" %}
