--- a/4pics1word/static/css/challenge-board.css
+++ b/4pics1word/static/css/challenge-board.css
@@ -60,7 +60,7 @@ body {
     overflow: hidden;
     padding: 20px;
     margin-bottom: 20px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 .challenge-board .card:hover {
