--- a/4pics1word/static/css/styles.css
+++ b/4pics1word/static/css/styles.css
@@ -17,7 +17,7 @@
     padding: 0;
 }
 
-#close-button-auth-popup {
+.close-button-auth-popup {
     position: absolute;
     top: 20px;
     right: 20px;
