--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -37,72 +37,88 @@
     <div class="container mt-4 trending-posts">
         <div id="trendingCards" class="row d-none d-md-flex">
             <div class="col-md-3">
-                <div class="card">
-                    <img src={{trending_games[0].image1}} class="card-img-top" alt="Image">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">{{trending_games[0].game_title}}</h5>
-                        <p class="card-poster">{{trending_games[0].creator.username}}</p>
+                <a href="{{ url_for('challenge_page', challenge_id=trending_games[0].gameId) }}" style="text-decoration: none; color: inherit;">
+                    <div class="card">
+                        <img src={{trending_games[0].image1}} class="card-img-top" alt="Image">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">{{trending_games[0].game_title}}</h5>
+                            <p class="card-poster">{{trending_games[0].creator.username}}</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="card">
-                    <img src={{trending_games[1].image1}} class="card-img-top" alt="Image">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">{{trending_games[1].game_title}}</h5>
-                        <p class="card-poster">{{trending_games[1].creator.username}}</p>
+                <a href="{{ url_for('challenge_page', challenge_id=trending_games[1].gameId) }}" style="text-decoration: none; color: inherit;">
+                    <div class="card">
+                        <img src={{trending_games[1].image1}} class="card-img-top" alt="Image">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">{{trending_games[1].game_title}}</h5>
+                            <p class="card-poster">{{trending_games[1].creator.username}}</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="card">
-                    <img src={{trending_games[2].image1}} class="card-img-top" alt="Image">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">{{trending_games[2].game_title}}</h5>
-                        <p class="card-poster">{{trending_games[2].creator.username}}</p>
+                <a href="{{ url_for('challenge_page', challenge_id=trending_games[2].gameId) }}" style="text-decoration: none; color: inherit;">
+                    <div class="card">
+                        <img src={{trending_games[2].image1}} class="card-img-top" alt="Image">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">{{trending_games[2].game_title}}</h5>
+                            <p class="card-poster">{{trending_games[2].creator.username}}</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="card">
-                    <img src={{trending_games[3].image1}} class="card-img-top" alt="Image">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">{{trending_games[3].game_title}}</h5>
-                        <p class="card-poster">{{trending_games[3].creator.username}}</p>
+                <a href="{{ url_for('challenge_page', challenge_id=trending_games[3].gameId) }}" style="text-decoration: none; color: inherit;">
+                    <div class="card">
+                        <img src={{trending_games[3].image1}} class="card-img-top" alt="Image">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">{{trending_games[3].game_title}}</h5>
+                            <p class="card-poster">{{trending_games[3].creator.username}}</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
 
         <!-- Horizontal scroll for smaller screens -->
         <div id="trendingCardsMobile" class="d-md-none d-flex flex-row flex-nowrap overflow-auto">
             <div class="card" style="min-width: 80%; margin-right: 20px;">
-                <img src={{trending_games[0].image1}} class="card-img-top" alt="Image">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">{{trending_games[0].game_title}}</h5>
-                    <p class="card-poster">{{trending_games[0].creator.username}}</p>
-                </div>
+                <a href="{{ url_for('challenge_page', challenge_id=trending_games[0].gameId) }}" style="text-decoration: none; color: inherit;">
+                    <img src={{ trending_games[0].image1 }} class="card-img-top" alt="Image">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">{{ trending_games[0].game_title }}</h5>
+                        <p class="card-poster">{{ trending_games[0].creator.username }}</p>
+                    </div>
+                </a>
             </div>
             <div class="card" style="min-width: 80%; margin-right: 20px;">
-                <img src={{trending_games[1].image1}} class="card-img-top" alt="Image">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">{{trending_games[1].game_title}}</h5>
-                    <p class="card-poster">{{trending_games[1].creator.username}}</p>
-                </div>
+                <a href="{{ url_for('challenge_page', challenge_id=trending_games[1].gameId) }}" style="text-decoration: none; color: inherit;">
+                    <img src={{ trending_games[1].image1 }} class="card-img-top" alt="Image">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">{{ trending_games[1].game_title }}</h5>
+                        <p class="card-poster">{{ trending_games[1].creator.username }}</p>
+                    </div>
+                </a>
             </div>
             <div class="card" style="min-width: 80%; margin-right: 20px;">
-                <img src={{trending_games[2].image1}} class="card-img-top" alt="Image">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">{{trending_games[2].game_title}}</h5>
-                    <p class="card-poster">{{trending_games[2].creator.username}}</p>
-                </div>
+                <a href="{{ url_for('challenge_page', challenge_id=trending_games[2].gameId) }}" style="text-decoration: none; color: inherit;">
+                    <img src={{ trending_games[2].image1 }} class="card-img-top" alt="Image">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">{{ trending_games[2].game_title }}</h5>
+                        <p class="card-poster">{{ trending_games[2].creator.username }}</p>
+                    </div>
+                </a>
             </div>
             <div class="card" style="min-width: 80%; margin-right: 20px;">
-                <img src={{trending_games[3].image1}} class="card-img-top" alt="Image">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">{{trending_games[3].game_title}}</h5>
-                    <p class="card-poster">{{trending_games[3].creator.username}}</p>
-                </div>
+                <a href="{{ url_for('challenge_page', challenge_id=trending_games[3].gameId) }}" style="text-decoration: none; color: inherit;">
+                    <img src={{ trending_games[3].image1 }} class="card-img-top" alt="Image">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">{{ trending_games[3].game_title }}</h5>
+                        <p class="card-poster">{{ trending_games[3].creator.username }}</p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
