--- a/4pics1word/templates/detailed-challenge.html
+++ b/4pics1word/templates/detailed-challenge.html
@@ -110,14 +110,14 @@
         </div>
     </div>
 
-    <a href="/challenge/play/{{game.gameId}}" class='btn play-button'>Play Game</a>
-
-    <p style = 'text-align: center;'>
-        Play the game here! Your guess count will be saved everytime you make a guess.
-    </p>
-    <p style = 'text-align: center;'>
-        Once you guess correctly you will not be able to play towards the leaderboard, but you can still play the game.
-    </p>
+    <div class='container d-flex align-items-center flex-column mt-5'>
+        <a href="/challenge/play/{{game.gameId}}" class='btn play-button text-center'>Play Game</a>
+    
+        <p style='text-align: center;'>
+            Play the game here! Your guess count will be saved every time you make a guess.
+        </p>
+    </div>
+    
 
 </body>
 </html>
