Began styling the create game page, adding a background that aligns with our theme.

--- a/4pics1word/static/css/create_game.css
+++ b/4pics1word/static/css/create_game.css
@@ -1,7 +1,15 @@
 body {
-    background-color: #F8F8F8;
+    background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
+}
+
+/* Set up for particles.js */
+#particles-js {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+    z-index: -1;
 }
 
 label svg {
@@ -13,12 +21,29 @@ input[type="file"] {
     display: none;
 }
 
+#game-title-input {
+    font-weight: 700;
+    color: black;
+    text-align: center;
+    border-color: rgb(172, 172, 172);
+    border-radius: 30px;
+    padding: 15px 30px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    background-color: white;
+}
 
 #word-input{   
     font-family: monospace;
     font-size: 36px;
     letter-spacing: 13px;
     display: inline-block;
+    text-align: center;
+    border: none;
+    margin: 20px;
+    outline: none;
+    background-color: transparent;
+    border-bottom: 3px solid white;
 }
 
 #word-input::after {
@@ -31,13 +56,9 @@ input[type="file"] {
     border-bottom: 3px solid black; /* Underline effect */
 }
 
-.images-content {
-    margin-top: 90px;
-}
-
 .image-cell {
-    width: 180px;
-    height: 180px;
+    width:45%;
+    height: 200px;
     background-color: #333;
     padding: 0;
     border-radius: 10px;
@@ -46,8 +67,9 @@ input[type="file"] {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 8px;
+    margin: 8px auto;
     position: relative;
+    overflow: hidden;
 }
 
 .change-img-icon {
@@ -62,6 +84,11 @@ input[type="file"] {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 90px;
+    padding: 20px;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
 }
 
 label {
@@ -72,5 +99,38 @@ label {
 }
 
 .text {
-    color: black
+    color: black;
+}
+
+#submit-upload-game {
+    font-weight: 700;
+    letter-spacing: 4px;
+    color: black;
+    text-align: center;
+    border-color: rgb(172, 172, 172);
+    border-radius: 30px;
+    padding: 15px 30px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    background-color: white;
+    margin-top: 20px;
+}
+
+#hint-container {
+    font-weight: 700;
+    color: black;
+    text-align: center;
+    border-color: rgb(172, 172, 172);
+    border-radius: 30px;
+    padding: 5px 5px;
+    margin-top: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    background-color: white;
+}
+
+#hint-container input[type="text"] {
+    padding-left: 10px;
+    border: none;
+    outline: none;
 }
