--- a/4pics1word/static/css/create_game.css
+++ b/4pics1word/static/css/create_game.css
@@ -1,5 +1,6 @@
 body {
     background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
+    min-height: 100vh;
 }
 
 /* Set up for particles.js */
@@ -10,6 +11,17 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
+}
+
+#title {
+    color: white;
+    font-size: 3.5em;
+    font-weight: bold;
+}
+
+.text {
+    color: black;
+    max-width: 100%;
 }
 
 label svg {
@@ -23,6 +35,7 @@ input[type="file"] {
 
 #game-title-input {
     font-weight: 700;
+    font-size: larger;
     color: black;
     text-align: center;
     border-color: rgb(172, 172, 172);
@@ -33,17 +46,26 @@ input[type="file"] {
     background-color: white;
 }
 
+.images-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+
 #word-input{   
     font-family: monospace;
     font-size: 36px;
     letter-spacing: 13px;
-    display: inline-block;
     text-align: center;
     border: none;
-    margin: 20px;
     outline: none;
     background-color: transparent;
-    border-bottom: 3px solid white;
+    border-bottom: 3px solid rgb(201, 201, 201);
 }
 
 #word-input::after {
@@ -57,7 +79,6 @@ input[type="file"] {
 }
 
 .image-cell {
-    width:45%;
     height: 200px;
     background-color: #333;
     padding: 0;
@@ -79,27 +100,11 @@ input[type="file"] {
     cursor: pointer;
 }
 
-.images-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 90px;
-    padding: 20px;
-    border-radius: 15px;
-    background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-}
-
 label {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.text {
-    color: black;
 }
 
 #submit-upload-game {
@@ -120,6 +125,7 @@ label {
     font-weight: 700;
     color: black;
     text-align: center;
+    border: 1px solid;
     border-color: rgb(172, 172, 172);
     border-radius: 30px;
     padding: 5px 5px;
@@ -127,10 +133,23 @@ label {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     background-color: white;
+    transition: opacity 0.5s ease;
+    display: none;
+    opacity: 0;
+}
+
+#hint-container.show {
+    display: block;
+    opacity: 1;
 }
 
 #hint-container input[type="text"] {
     padding-left: 10px;
     border: none;
     outline: none;
+    text-align: center;
+}
+
+.hello-world {
+    background-color: rgba(0, 0, 0, 0.294);
 }
