--- a/4pics1word/static/css/challenge_page.css
+++ b/4pics1word/static/css/challenge_page.css
@@ -1,11 +1,7 @@
-body {
-    margin: 80px auto 65px;
-    max-width: 1000px;
-    padding: 2.5rem;
-}
 
-.text, p{
-    color: white;
+p {
+    color: black;
+    font-size: larger;
 }
 
 .images-leaderboard-container {
@@ -13,31 +9,57 @@ body {
     flex-direction: column;
 }
 
-p {
-    margin: 40px 0px;
+.images-leaderboard-container .image-cell {
+    height: 100%;
+}
+
+@media (max-width: 480px) {
+    .images-leaderboard-container .image-cell {
+        min-width: 50%;
+    }
 }
 
 .title-iamges-leaderboard {
-
     display: flex;
     flex-direction: column;
 
 }
 
-
 .container-wrapper {
     display: flex;
     flex-wrap: wrap;
     gap: 2vw;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
 }
 
 .play-button {
-    background-color: purple;
-    color: white;
+    background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
+    background-size: 0% 100%;
+    background-position: left center;
+    transition: background-size 0.3s ease-out, color 0.3s ease;
+    background-repeat: no-repeat;
+    color: rgb(169, 143, 255);
+    height: 70px;
+    line-height: 50px;
+    font-weight: 700;
+    border-radius: 20px;
+    border: 2px solid rgb(169, 143, 255);
+
 }
+
+.play-button:hover {
+    background-size: 100% 100%;
+    color: #FFF;
+    border: 2px solid rgb(169, 143, 255);
+}
+
 
 .grid-container {
     flex: 1;
+    padding: 15px;
+    font-weight: 600;
 }
 
 .row {
@@ -48,39 +70,66 @@ p {
 
 .table-container {
     flex: 1;
-    /* margin-left: 20px; Adjust as needed for spacing between grid and table */
+    padding: 15px;
+    font-weight: 600;
 }
 
-.table-container {
-    background-color: transparent;
-    color: white;
+.table-container h1 {
+    color: black;
 }
 
 table {
     width: 100%;
-    border-collapse: collapse;
-    border-radius: 1em;
+    border-collapse: separate;
+    border-spacing: 0 10px;
     overflow: hidden;
-    border: 1px solid white;
-
-      
 }
 
-thead {
-    background-color: #ddd;
-    background-color: rgba(255, 255, 255, 0.4);
+thead tr {
+    background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
+    color: #FFF;
+    border-radius: 8px;
 }
 
-tr {
-    background-color: rgba(255, 255, 255, 0.13);
+thead tr th:first-child {
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+thead tr th:last-child {
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+tbody tr {
+    background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
+    background-size: 0% 100%;
+    background-position: left center;
+    transition: background-size 0.3s ease-out, color 0.3s ease;
+    background-repeat: no-repeat;
+}
+
+tbody tr:hover {
+    background-size: 100% 100%;
+    color: #FFF;
 }
 
 th, td {
-    border: 1px solid white;
-    padding: 8px;
-    text-align: center;
+    padding: 12px 15px;
 }
 
-th {
-    font-weight: bold;
+tbody tr td:first-child {
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+tbody tr td:last-child {
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+@media (max-width: 480px) {
+    th, td {
+        padding: 12px 0px; /* Reducing horizontal padding */
+    }
 }
