--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4pics1word | Play Game</title>
     <script> const answer = "{{ answer }}"; </script>
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
     <script defer src="{{ url_for('static', filename='js/game-attempt.js') }}"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-
     <link rel="stylesheet" href="{{ url_for('static', filename='css/game_attempt.css') }}">
+    <script defer src = "{{url_for('static', filename = 'js/search.js')}}"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script defer src="{{ url_for('static', filename='js/particles.js') }}"></script>
     <style>
       .flex-container{
           display: flex;
@@ -76,6 +81,13 @@
 </head>
 
 <body>
+
+  {% include "/html_components/navbar.html" %}
+
+  {% include "/html_components/auth_modal.html" %}
+
+  <div id="particles-js"></div>
+
     <div class = 'images-content container'>
 
         <h2 class = 'text'>
