Reached an intermediate point for styling of the game-play page, modified html for better use of bootstrap for page layout.

--- a/4pics1word/templates/detailed-challenge.html
+++ b/4pics1word/templates/detailed-challenge.html
@@ -31,7 +31,7 @@
     <div id="particles-js"></div>
 
     <div class='col-10 offset-1 mb-4 title-images-leaderboard'>
-        <h1 class="text text-center mt-4 mb-4">{{game.game_title}}</h1>
+        <h1 class="text text-center fw-bold mt-4 mb-4">{{game.game_title}}</h1>
         <div class="container-wrapper text-center">
             <div class="col-md-6 col-12 mb-4 grid-container">
                 <h1>
