--- a/4pics1word/static/css/game_attempt.css
+++ b/4pics1word/static/css/game_attempt.css
@@ -66,6 +66,22 @@ input[type="file"] {
     align-items: center;
 }
 
+.content-container {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+}
+
+.word-enter-title {
+    color: black !important;
+}
+
+.word-container input {
+    color: black !important;
+    border-color: black !important;
+    border-radius: 7px;
+}
+
 label {
     display: flex;
     flex-direction: column;
@@ -82,4 +98,27 @@ label {
     height: 100%;
     object-fit: cover;
     border-radius: 6px;
+}
+
+.play-button {
+    background-color: transparent;
+    background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
+    background-size: 0% 100%;
+    background-position: left center;
+    transition: background-size 0.3s ease-out, color 0.3s ease;
+    background-repeat: no-repeat;
+    color: rgb(169, 143, 255);
+    height: 70px;
+    line-height: 50px;
+    font-weight: 700;
+    border-radius: 20px;
+    border: 2px solid rgb(169, 143, 255);
+
+}
+
+.play-button:hover {
+    background-color: transparent;
+    background-size: 100% 100%;
+    color: #FFF;
+    border: 2px solid rgb(169, 143, 255);
 }
