--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -1,82 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4pics1word | Play Game</title>
-    <script> const answer = "{{ answer }}"; </script>
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
-    <script defer src="{{ url_for('static', filename='js/game-attempt.js') }}"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/game_attempt.css') }}">
-    <script defer src = "{{url_for('static', filename = 'js/search.js')}}"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script defer src="{{ url_for('static', filename='js/particles.js') }}"></script>
-    <style>
-      .flex-container{
-          display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        width: 40vw;
-      }
-  
-      .input-container {
-        position: relative;
-        width: 100%;
-        text-align: center;
-      }
-  
-      .letter-input {
-          text-align: center; 
-          border: 3px solid white; 
-          width: 65px; 
-          height: 75px; 
-          padding: 10px; 
-          margin: 5px; 
-          outline: none; 
-          background-color: transparent;
-          font-size: 30px;
-          color: white;
-      }
-  
-      .spacer {
-          width: 30px; 
-          height: 20px; 
-          display: block; 
-          text-align: center;
-      }
-  
-      .incorrect-input {
-          text-align: center; 
-          border: 3px solid red; 
-          width: 65px; 
-          height: 75px; 
-          padding: 10px; 
-          margin: 5px; 
-          outline: none; 
-          background-color: transparent;
-          font-size: 30px;
-          color: white;
-      }
-  
-      .correct-input {
-          text-align: center; 
-          border: 4px solid lawngreen; 
-          width: 65px; 
-          height: 75px; 
-          padding: 10px; 
-          margin: 5px; 
-          outline: none; 
-          background-color: transparent;
-          font-size: 30px;
-          color: white;
-      }
-  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>4pics1word | Play Game</title>
+  <script> const answer = "{{ answer }}"; </script>
+  <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
+  <script defer src="{{ url_for('static', filename='js/game-attempt.js') }}"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/game_attempt.css') }}">
+  <script defer src="{{url_for('static', filename = 'js/search.js')}}"></script>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script defer src="{{ url_for('static', filename='js/particles.js') }}"></script>
+  <style>
+    .flex-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      width: 40vw;
+    }
+
+    .input-container {
+      position: relative;
+      width: 100%;
+      text-align: center;
+    }
+
+    .letter-input {
+      text-align: center;
+      border: 3px solid white;
+      width: 65px;
+      height: 75px;
+      padding: 10px;
+      margin: 5px;
+      outline: none;
+      background-color: transparent;
+      font-size: 30px;
+      color: white;
+    }
+
+    .spacer {
+      width: 30px;
+      height: 20px;
+      display: block;
+      text-align: center;
+    }
+
+    .incorrect-input {
+      text-align: center;
+      border: 3px solid red;
+      width: 65px;
+      height: 75px;
+      padding: 10px;
+      margin: 5px;
+      outline: none;
+      background-color: transparent;
+      font-size: 30px;
+      color: white;
+    }
+
+    .correct-input {
+      text-align: center;
+      border: 4px solid lawngreen;
+      width: 65px;
+      height: 75px;
+      padding: 10px;
+      margin: 5px;
+      outline: none;
+      background-color: transparent;
+      font-size: 30px;
+      color: white;
+    }
   </style>
 </head>
 
@@ -88,58 +93,57 @@
 
   <div id="particles-js"></div>
 
-    <div class = 'images-content container'>
+  <div class='images-content container'>
 
-        <h2 class = 'text'>
-            Attempt <span id="attempt-counter">1</span>
-        </h2>
+    <h2 class='text'>
+      Attempt <span id="attempt-counter">1</span>
+    </h2>
 
-        <div>
-            <div class="row">
-              <div class="col-6 image-cell" id = 'img1'>
-                <img src="{{ game.image1 }}" alt="image1">
-              </div>
-              <div class="col-6 image-cell" id = 'img2'>
-                <img src="{{ game.image2 }}" alt="image2">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-6 image-cell" id = 'img3'>
-                <img src="{{ game.image3 }}" alt="image3">
-              </div>
-              <div class="col-6 image-cell" id = 'img4'>
-                <img src="{{ game.image4 }}" alt="image4">
-              </div>
-            </div>
-          </div>
-        
-        <div class = 'word-enter-title text' style = 'text-align: center;'>
-            Take a Guess
+    <div class="container content-container">
+      <div class="row justify-content-center">
+        <div class="col-md-3 col-6 image-cell" id='img1'>
+          <img src="{{ game.image1 }}" alt="image1">
         </div>
-        
-        <div class = 'flex-container'>
-            {% set words = game.answer.split(" ") %}
-            {% set counts = namespace() %}
-            {% set counts.letters = 0 %}
-            
-            {% for word in words %}
-                <div class="word-container">
-                    {% for letter in word %}
-                        <input id="input{{ counts.letters }}" class="letter-input" type="text" maxlength="1" oninput="nextInput('input{{ counts.letters }}', 'input{{ counts.letters + 1 }}')" onkeydown="previousInput(event, 'input{{ counts.letters }}', 'input{{ counts.letters - 1 }}')">
-                        {% set counts.letters = counts.letters + 1 %}
-                    {% endfor %}
-                </div>
-                
-                <div class="spacer"></div>
+        <div class="col-md-3 col-6 image-cell" id='img2'>
+          <img src="{{ game.image2 }}" alt="image2">
+        </div>
+        <div class="col-md-3 col-6 image-cell" id='img3'>
+          <img src="{{ game.image3 }}" alt="image3">
+        </div>
+        <div class="col-md-3 col-6 image-cell" id='img4'>
+          <img src="{{ game.image4 }}" alt="image4">
+        </div>
+
+      </div>
+      <div class="container">
+        <div class='word-enter-title text' style='text-align: center;'>
+          Take a Guess
+        </div>
+
+          {% set words = game.answer.split(" ") %}
+          {% set counts = namespace() %}
+          {% set counts.letters = 0 %}
+
+          {% for word in words %}
+          <div class="word-container d-flex flex-nowrap justify-content-center mb-5">
+            {% for letter in word %}
+            <input id="input{{ counts.letters }}" class="letter-input" type="text" maxlength="1"
+              oninput="nextInput('input{{ counts.letters }}', 'input{{ counts.letters + 1 }}')"
+              onkeydown="previousInput(event, 'input{{ counts.letters }}', 'input{{ counts.letters - 1 }}')">
+            {% set counts.letters = counts.letters + 1 %}
             {% endfor %}
-            <!-- <div id="underline-container"></div> -->
-        </div>
+          </div>
 
-        <div>
-            <button onclick = "makeGuess()" class="btn btn-primary" id="make-guess">Guess</button>
+          {% endfor %}
+
+
+        <div class="col-12 d-flex justify-content-center">
+          <button onclick="makeGuess()" class="btn btn-primary play-button" id="make-guess">Guess</button>
         </div>
+      </div>
     </div>
-    
+  </div>
+
 </body>
 
 </html>
