Modified a few isssues that appeared after pulling main in the main.py file and challenge.html. Specifically the routing and jinja respectively.

--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -124,7 +124,7 @@
         </div>
         
         <div class = 'flex-container'>
-            {% set words = game.answer.split(" ") %}
+            {% set words = answer.split(" ") %}
             {% set counts = namespace() %}
             {% set counts.letters = 0 %}
             
