linked the js file to the html page, and serialised the game objects to have actual string values in the json reponse. The AJAX code correctly fetches the games in pages of 6

--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -15,6 +15,7 @@
     <script defer src = "{{url_for('static', filename = 'js/login-validation.js')}}"></script>
     <script defer src = "{{url_for('static', filename = 'js/search.js')}}"></script>
     <script defer src = "{{url_for('static', filename = 'js/upvote.js')}}"></script>
+    <script defer src = "{{url_for('static', filename = 'js/load-new-challenges.js')}}"></script>
     <title>Challenges | Explore Other SnapCipher games </title>
     <style>
         .form-control.is-valid, .was-validated .form-control:valid {
