--- a/4pics1word/templates/detailed-challenge.html
+++ b/4pics1word/templates/detailed-challenge.html
@@ -31,12 +31,12 @@
     <div id="particles-js"></div>
 
     <div class='col-10 offset-1 mb-4 title-images-leaderboard'>
-        <h1 class="text text-center fw-bold mt-4 mb-4">{{game.game_title}}</h1>
+        <h1 class="text text-center mt-4 mb-4">{{game.game_title}}</h1>
         <div class="container-wrapper text-center">
             <div class="col-md-6 col-12 mb-4 grid-container">
-                <h1>
+                <h2>
                     Guess the phrase!
-                </h1>
+                </h2>
                 <div class="images-leaderboard-container mt-2">
                     <div class="row g-0">
                         <div class="col-6 image-cell" id="img1">
@@ -64,9 +64,9 @@
                 </div>
             </div>
             <div class="col-md-6 col-12 table-container">
-                <h1>
+                <h2>
                     Leaderboard
-                </h1>
+                </h2>
                 <table>
                     <thead>
                         <tr>
