--- a/4pics1word/static/css/game_attempt.css
+++ b/4pics1word/static/css/game_attempt.css
@@ -13,6 +13,66 @@ body {
     z-index: -1;
 }
 
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 40vw;
+}
+
+.input-container {
+    position: relative;
+    width: 100%;
+    text-align: center;
+}
+
+.letter-input {
+    text-align: center;
+    border: 3px solid white;
+    width: 65px;
+    height: 75px;
+    padding: 10px;
+    margin: 5px;
+    outline: none;
+    background-color: transparent;
+    font-size: 30px;
+    color: white;
+}
+
+.spacer {
+    width: 30px;
+    height: 20px;
+    display: block;
+    text-align: center;
+}
+
+.incorrect-input {
+    text-align: center;
+    border: 3px solid red;
+    width: 65px;
+    height: 75px;
+    padding: 10px;
+    margin: 5px;
+    outline: none;
+    background-color: transparent;
+    font-size: 30px;
+    color: white;
+}
+
+.correct-input {
+    text-align: center;
+    border: 4px solid lawngreen;
+    width: 65px;
+    height: 75px;
+    padding: 10px;
+    margin: 5px;
+    outline: none;
+    background-color: transparent;
+    font-size: 30px;
+    color: white;
+}
+
 label svg {
     cursor: pointer;
     padding: 10px;
